<resources>
    <string name="app_name">Ywaste APP</string>
    <string name="title_activity_main5">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">My donation</string>
    <string name="menu_slideshow">Rate Us</string>
    <string name="menu_Aboutus">About Us</string>
    <string name="menu_logout">Log out</string>
</resources>