<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_donation"
            android:icon="@drawable/ic_ocal_dining"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_Aboutus" />
        <item
            android:id="@+id/nav_rateus"
            android:icon="@drawable/ic_stars"
            android:title="@string/menu_slideshow" />

    </group>
</menu>