<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.ywasteapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_donation"
        android:name="com.example.ywasteapp.ui.donation.donation"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_donation" />

    <fragment
        android:id="@+id/nav_rateus"
        android:name="com.example.ywasteapp.ui.rateus.rateus"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_rateus" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.ywasteapp.ui.about.about"
        android:label="@string/menu_Aboutus"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.ywasteapp.ui.logout.logout"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />

</navigation>